<resources>
    <string name="app_name">Educo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="no_account">No Account ?</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="interests">Interests</string>
    <string name="confirm">Confirm</string>
    <string name="technology">Technology</string>
    <string name="please_select_your_location">Please select your Location</string>
    <string name="long_dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pharetra maximus fringilla. Proin non velit accumsan, ultricies quam nec, pharetra risus. Curabitur rhoncus imperdiet sapien, sit amet commodo diam ultricies sed. Vivamus lobortis, tellus eu elementum consectetur, diam felis imperdiet tortor, ac laoreet nulla sapien non ante. Aenean ullamcorper, neque eget venenatis fringilla, lacus leo ultricies augue, sed fermentum libero diam vel enim. Nunc ac sagittis ex, nec maximus nunc. Suspendisse blandit urna nisl, sed bibendum magna consequat at. Aliquam erat lorem, dictum id dapibus in, pretium quis neque. Duis purus quam, faucibus vel imperdiet consequat, hendrerit eget nisi. Aliquam dolor nulla, sagittis eget ex vel, bibendum ultrices turpis. Proin aliquet elit nec iaculis efficitur.</string>
</resources>
